Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5106

Assert on ParentSelection.h line 337, there is no selection_strategy for default parent proxy.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Parent Proxy
    • None

    Description

      FATAL: ParentSelection.h:337: failed assertion `result->rec->selection_strategy != NULL`
      traffic_server: Aborted (Signal sent by tkill() 21363 65534)
      traffic_server - STACK TRACE: 
      ../../bin/traffic_server(crash_logger_invoke(int, siginfo_t*, void*)+0x99)[0x4c1be9]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0xf8d0)[0x7f8b2a8ba8d0]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x37)[0x7f8b29b15107]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x148)[0x7f8b29b164e8]
      /usr/local/ats/lib/libtsutil.so.7(+0x2ac31)[0x7f8b2c1adc31]
      /usr/local/ats/lib/libtsutil.so.7(+0x28c95)[0x7f8b2c1abc95]
      ../../bin/traffic_server(ParentConfigParams::findParent(HttpRequestData*, ParentResult*)+0x56e)[0x4f677e]
      ../../bin/traffic_server(SocksEntry::init(Ptr<ProxyMutex>&, UnixNetVConnection*, unsigned char, unsigned char)+0x59b)[0x762dfb]
      ../../bin/traffic_server(UnixNetProcessor::connect_re_internal(Continuation*, sockaddr const*, NetVCOptions*)+0x251)[0x74eaf1]
      ../../bin/traffic_server(HttpSM::do_http_server_open(bool)+0x850)[0x5bb5d0]
      ../../bin/traffic_server(HttpSM::set_next_state()+0x4a3)[0x5bc7b3]
      ../../bin/traffic_server(HttpSM::call_transact_and_set_next_state(void (*)(HttpTransact::State*))+0x3a)[0x5ae28a]
      ../../bin/traffic_server(HttpSM::state_cache_open_write(int, void*)+0x1ce)[0x5b083e]
      ../../bin/traffic_server(HttpSM::main_handler(int, void*)+0xc8)[0x5b6eb8]
      ../../bin/traffic_server(HttpCacheSM::state_cache_open_write(int, void*)+0x1d1)[0x599221]
      ../../bin/traffic_server(CacheVC::callcont(int)+0x5b)[0x6a1b2b]
      ../../bin/traffic_server(Cache::open_write(Continuation*, ats::CryptoHash const*, HTTPInfo*, long, ats::CryptoHash const*, CacheFragType, char const*, int)+0x56b)[0x713f0b]
      ../../bin/traffic_server(HttpCacheSM::open_write(HttpCacheKey const*, URL*, HTTPHdr*, HTTPInfo*, long, bool, bool)+0xcd)[0x598fed]
      ../../bin/traffic_server(HttpSM::do_cache_prepare_action(HttpCacheSM*, HTTPInfo*, bool, bool)+0x15d)[0x5a90dd]
      ../../bin/traffic_server(HttpSM::set_next_state()+0x8b6)[0x5bcbc6]
      ../../bin/traffic_server(HttpSM::call_transact_and_set_next_state(void (*)(HttpTransact::State*))+0x3a)[0x5ae28a]
      ../../bin/traffic_server(HttpSM::handle_api_return()+0xe7)[0x5b95f7]
      ../../bin/traffic_server(HttpSM::set_next_state()+0x16b)[0x5bc47b]
      ../../bin/traffic_server(HttpSM::call_transact_and_set_next_state(void (*)(HttpTransact::State*))+0x3a)[0x5ae28a]
      ../../bin/traffic_server(HttpSM::state_hostdb_lookup(int, void*)+0xa0)[0x5ba540]
      ../../bin/traffic_server(HttpSM::main_handler(int, void*)+0xc8)[0x5b6eb8]
      ../../bin/traffic_server[0x690386]
      ../../bin/traffic_server(HostDBContinuation::do_dns()+0x1d7)[0x691fc7]
      ../../bin/traffic_server(HostDBContinuation::probeEvent(int, Event*)+0x228)[0x6946a8]
      ../../bin/traffic_server(EThread::process_event(Event*, int)+0x8d)[0x77980d]
      ../../bin/traffic_server(EThread::execute()+0x73d)[0x77a4cd]
      ../../bin/traffic_server[0x778c4a]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x80a4)[0x7f8b2a8b30a4]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7f8b29bc607d]
      Aborted
      

      The default parent proxy is set by ParentRecord::DefaultInit(char *val), but it is not create selection_strategy for default parent proxy.

      Attachments

        Issue Links

          Activity

            People

              oknet Chao Xu
              oknet Chao Xu
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m