TS-5106: Create ParentRoundRobin object as ParentRecord->selection_strategy for default parent proxy server

(cherry picked from commit 7ffe037845f45497aa9e95919a3a7bc0ca288163)